--- a/airbnb/index.html
+++ b/airbnb/index.html
@@ -16,7 +16,7 @@
   <body>
     <div class="wrap">
       <div class="black-bg"></div>
-      <!-- <header>
+      <header>
         <a href="#">코로나19 대응 방안에 대한 최신 정보를 확인하세요.</a>
         <div class="gnb mt-sm">
           <div class="logo">
@@ -71,12 +71,63 @@
             </ul>
           </div>
         </div>
-      </header> -->
-      <section class="notice"></section>
-      <section class="mainBanner"></section>
-      <section class="idea"></section>
-      <section class="expression"></section>
-      <footer class="footer"></footer>
+      </header>
+      <section class="notice mt-lg">
+        <p>10만명에 달하는 우크라이나 피란민에게 임시 숙소를 제공해 주세요</p>
+        <button>자세히 알아보기</button>
+      </section>
+      <section class="mainBanner mt-lg">
+        <div class="content">
+          <p>호기심을 자극하는 숙소로 떠나보세요</p>
+          <button><span>유연한 검색</span></button>
+        </div>
+      </section>
+
+      <section class="idea mt-lg">
+        <p class="heading">설레는 다음 여행을 위한 아이디어</p>
+        <div class="city mt-sm">
+          <firgure class="card">
+            <img src="img/pic2.jfif" alt="" />
+            <figcaption style="background-color: red">
+              <p>대구</p>
+              <span>10km 거리</span>
+            </figcaption>
+          </firgure>
+          <firgure class="card">
+            <img src="img/pic3.jfif" alt="" />
+            <figcaption style="background-color: orange">
+              <p>제주</p>
+              <span>35km 거리</span>
+            </figcaption>
+          </firgure>
+          <firgure class="card">
+            <img src="img/pic4.jpg" alt="" />
+            <figcaption style="background-color: green">
+              <p>대구</p>
+              <span>25km 거리</span>
+            </figcaption>
+          </firgure>
+          <firgure class="card">
+            <img src="img/pic5.jfif" alt="" />
+            <figcaption style="background-color: blue">
+              <p>서울</p>
+              <span>1km 거리</span>
+            </figcaption>
+          </firgure>
+        </div>
+      </section>
+      <section class="expression mt-lg">
+        <p class="heading">에어비앤비 체험 둘러보기</p>
+        <div class="photoDiv">
+          <p>여행중 만나는<br />이색적인 즐길거리</p>
+          <button>체험</button>
+        </div>
+        <div class="photoDiv">
+          <p>집에서 만나는<br />다양한 즐길거리</p>
+          <button>온라인 체험</button>
+        </div>
+      </section>
+      <footer></footer>
     </div>
   </body>
 </html>
